tests/test_files_pa3/SemanticErrors/badIf1.ic
class A
{
	
	static void main(string[] args) { }

	void badIf()
	{
		int x;
		x = 4;
		
		string s = "test";
		
		if(s + "bla")
		{
			boolean b = (x < (x-1));
		}			
		return;			
		return;
	}
	
}